unpackaged/main/default/objects/ClientList__c/ClientList__c.object-meta.xml
<CustomObject>
    <label>Client List</label>
    <nameField>
        <label>Client List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>