unpackaged/main/default/objects/ClientList__c/fields/AlwaysLimitedList__c.field-meta.xml
<CustomField>
    <fullName>AlwaysLimitedList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Always Limited List</label>
    <type>Checkbox</type>
</CustomField>