unpackaged/main/default/objects/ClientList__c/fields/Ascendant__c.field-meta.xml
<CustomField>
    <fullName>Ascendant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ascendant</label>
    <type>Checkbox</type>
</CustomField>