unpackaged/main/default/objects/ClientList__c/fields/ClientListQuery__c.field-meta.xml
<CustomField>
    <fullName>ClientListQuery__c</fullName>
    <label>ClientListQuery</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>