unpackaged/main/default/objects/ClientList__c/fields/ContactedSectionDisplayPeriod__c.field-meta.xml
<CustomField>
    <fullName>ContactedSectionDisplayPeriod__c</fullName>
    <label>Contacted Section Display Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>