unpackaged/main/default/objects/ClientList__c/fields/DisplayToReachOutContactedSection__c.field-meta.xml
<CustomField>
    <fullName>DisplayToReachOutContactedSection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display To Reach Out/Contacted Section</label>
    <type>Checkbox</type>
</CustomField>