unpackaged/main/default/objects/ClientList__c/fields/DisplayType__c.field-meta.xml
<CustomField>
    <fullName>DisplayType__c</fullName>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Total Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>