unpackaged/main/default/objects/ClientList__c/fields/expectedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>expectedDeliveryDate__c</fullName>
    <label>Expected Delivery Date</label>
    <length>18</length>
    <type>Text</type>
</CustomField>