unpackaged/main/default/objects/ClientList__c/fields/InMyStore__c.field-meta.xml
<CustomField>
    <fullName>InMyStore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In My Store</label>
    <type>Checkbox</type>
</CustomField>