unpackaged/main/default/objects/ClientList__c/fields/IsDarkText__c.field-meta.xml
<CustomField>
    <fullName>IsDarkText__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dark Text</label>
    <type>Checkbox</type>
</CustomField>