unpackaged/main/default/objects/ClientList__c/fields/IsManagerList__c.field-meta.xml
<CustomField>
    <fullName>IsManagerList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manager List</label>
    <type>Checkbox</type>
</CustomField>