unpackaged/main/default/objects/ClientList__c/fields/IsSpecialClientList__c.field-meta.xml
<CustomField>
    <fullName>IsSpecialClientList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Special Client List</label>
    <type>Checkbox</type>
</CustomField>