unpackaged/main/default/objects/ClientList__c/fields/OrderBy__c.field-meta.xml
<CustomField>
    <fullName>OrderBy__c</fullName>
    <label>Order By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>totalTurnover</fullName>
                <label>Total Amount Of Client Purchase</label>
            </value>
            <value>
                <fullName>lastPurchaseDate</fullName>
                <label>Last Purchase Date</label>
            </value>
            <value>
                <fullName>firstName</fullName>
                <label>First Name</label>
            </value>
            <value>
                <fullName>lastName</fullName>
                <label>Last Name</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>