unpackaged/main/default/objects/ClientList__c/fields/SpecificFieldDisplay__c.field-meta.xml
<CustomField>
    <fullName>SpecificFieldDisplay__c</fullName>
    <label>Specific Field Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>