unpackaged/main/default/objects/ClientList__c/fields/SpecificFieldDisplayLabel__c.field-meta.xml
<CustomField>
    <fullName>SpecificFieldDisplayLabel__c</fullName>
    <label>Specific Field Display Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>