unpackaged/main/default/objects/ClientList__c/fields/StaticList__c.field-meta.xml
<CustomField>
    <fullName>StaticList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Static List</label>
    <type>Checkbox</type>
</CustomField>