unpackaged/main/default/objects/ClientList__c/fields/Stores__c.field-meta.xml
<CustomField>
    <fullName>Stores__c</fullName>
    <label>Stores</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AE00</fullName>
                <label>RIMOWA Orient Trading LLC</label>
            </value>
            <value>
                <fullName>AE01</fullName>
                <label>Dubai - Dubai Mall</label>
            </value>
            <value>
                <fullName>AE02</fullName>
                <label>Dubai - Mall of the Emirates</label>
            </value>
            <value>
                <fullName>AE03</fullName>
                <label>Dubai - Galeries Lafayette</label>
            </value>
            <value>
                <fullName>AT00</fullName>
                <label>RIMOWA Austria</label>
            </value>
            <value>
                <fullName>AT01</fullName>
                <label>Salzburg - Getreidegasse</label>
            </value>
            <value>
                <fullName>AT02</fullName>
                <label>Vienna - Seitzergasse</label>
            </value>
            <value>
                <fullName>AU00</fullName>
                <label>RIMOWA Australia</label>
            </value>
            <value>
                <fullName>AU01</fullName>
                <label>Melbourne - Chadstone</label>
            </value>
            <value>
                <fullName>AU02</fullName>
                <label>Sydney - Westfield</label>
            </value>
            <value>
                <fullName>AU03</fullName>
                <label>Sydney - David Jones</label>
            </value>
            <value>
                <fullName>AUCS</fullName>
                <label>Australia - Corporate Sales</label>
            </value>
            <value>
                <fullName>BR00</fullName>
            </value>
            <value>
                <fullName>BR01</fullName>
                <label>São Paulo - Fasano Jardins</label>
            </value>
            <value>
                <fullName>BR02</fullName>
                <label>Rio de Janeiro - Shopping Leblon</label>
            </value>
            <value>
                <fullName>BR03</fullName>
                <label>São Paulo - Iguatemi São Paulo</label>
            </value>
            <value>
                <fullName>BR04</fullName>
                <label>Brasília - Iguatemi Brasilia</label>
            </value>
            <value>
                <fullName>BR05</fullName>
                <label>Rio de Janeiro - Barra da Tujica</label>
            </value>
            <value>
                <fullName>BR06</fullName>
                <label>Belo Horizonte - BH Shopping</label>
            </value>
            <value>
                <fullName>BR07</fullName>
                <label>Curitiba - Patio Batel</label>
            </value>
            <value>
                <fullName>BR08</fullName>
                <label>São Paulo - JK Iguatemi</label>
            </value>
            <value>
                <fullName>BR09</fullName>
                <label>São Roque - Catarina Fashion Outlet</label>
            </value>
            <value>
                <fullName>BR10</fullName>
                <label>RIMOWA CARE</label>
            </value>
            <value>
                <fullName>CA00</fullName>
                <label>Toronto - Bloor Street</label>
            </value>
            <value>
                <fullName>CA02</fullName>
                <label>Vancouver- Alberni Street</label>
            </value>
            <value>
                <fullName>CA90</fullName>
                <label>RIMOWA Cambridge HQ</label>
            </value>
            <value>
                <fullName>CN00</fullName>
                <label>RIMOWA China</label>
            </value>
            <value>
                <fullName>CN01</fullName>
                <label>Beijing - SKP Beijing</label>
            </value>
            <value>
                <fullName>CN02</fullName>
                <label>Shanghai Service Centre</label>
            </value>
            <value>
                <fullName>CN03</fullName>
                <label>Shenyang Service Centre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>