unpackaged/main/default/objects/ClientList__c/fields/VisibilityBasedOnField__c.field-meta.xml
<CustomField>
    <fullName>VisibilityBasedOnField__c</fullName>
    <label>Visibility Based On Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local_Main_CA__c</fullName>
            </value>
            <value>
                <fullName>Last_Transaction_SA__pc</fullName>
            </value>
            <value>
                <fullName>ClientAdvisor__pc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>