unpackaged/main/default/objects/ClientList__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>OrderBy__c</columns>
    <columns>Ascendant__c</columns>
    <columns>DisplayType__c</columns>
    <columns>StaticList__c</columns>
    <columns>InMyStore__c</columns>
    <columns>IsManagerList__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>