unpackaged/main/default/objects/ClientList__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>ClientListQuery__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>