unpackaged/main/default/objects/ClientList__c/listViews/Membered_List.listView-meta.xml
<ListView>
    <fullName>Membered_List</fullName>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>ClientListQuery__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>VisibilityBasedOnField__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Membered</value>
    </filters>
    <label>Membered List</label>
</ListView>