unpackaged/main/default/objects/ClientList__c/listViews/Membered_Lists.listView-meta.xml
<ListView>
    <fullName>Membered_Lists</fullName>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>ClientListQuery__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Membered</value>
    </filters>
    <label>Campaign Lists</label>
</ListView>