unpackaged/main/default/objects/ClientList__c/listViews/Non_Personal_List.listView-meta.xml
<ListView>
    <fullName>Non_Personal_List</fullName>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>ClientListQuery__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>VisibilityBasedOnField__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>Membered,Personal</value>
    </filters>
    <label>HQ List</label>
</ListView>